# zaza-openstack-tests

./: .gitignore  .travis.yml  MANIFEST.in  README.md  codecov.yml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: tox.yaml
constraints/: README.md  constraints-2024.1.txt  constraints-master.txt  constraints-noble.txt
unit_tests/: __init__.py  test_openstack.py  utils.py
unit_tests/charm_tests/: __init__.py  test_magnum.py  test_mysql.py  test_neutron.py  test_rabbitmq_server.py  test_tempest.py  test_utils.py
unit_tests/utilities/: .test_zaza_utilities_openstack.py.swp  .test_zaza_utilities_parallel_series_upgrade.py.swp  swift_test_data.py  test_utilities.py  test_zaza_utilities_ceph.py  test_zaza_utilities_cli.py  test_zaza_utilities_generic.py  test_zaza_utilities_juju.py  test_zaza_utilities_openstack.py  test_zaza_utilities_openstack_upgrade.py  test_zaza_utilities_os_versions.py  test_zaza_utilities_parallel_series_upgrade.py  test_zaza_utilities_series_upgrade.py  test_zaza_utilities_swift.py  test_zaza_utilities_upgrade_utils.py
zaza/openstack/: __init__.py
zaza/openstack/charm_tests/: test_utils.py
zaza/openstack/configure/: bgp_speaker.py  ceph_proxy.py  guest.py  hacluster.py  masakari.py  network.py  pre_deploy_certs.py  telemetry.py
zaza/openstack/select/: __init__.py  charm.py
zaza/openstack/utilities/: .openstack.py.swp  __init__.py  ceph.py  charm_upgrade.py  cli.py  exceptions.py  generic.py  juju.py  kubernetes.py  openstack.py  openstack_upgrade.py  os_versions.py  parallel_series_upgrade.py  swift.py  (+3 more)
(+186 files in other folders)
