[metadata]
name = zaza.openstack
summary = Zaza tests for the OpenStack Charms project
version = 0.0.1.dev1
description-file =
    README.rst
author = OpenStack Charmers
author-email = openstack-charmers@lists.ubuntu.com
url = https://github.com/openstack-charmers/zaza-openstack-tests
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: System
    Topic :: System :: Installation/Setup
    opic :: System :: Software Distribution
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: Apache Software License

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zaza_openstack_tests/locale
domain = zaza_openstack_tests

[update_catalog]
domain = zaza_openstack_tests
output_dir = zaza_openstack_tests/locale
input_file = zaza_openstack_tests/locale/zaza.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zaza_openstack_tests/locale/zaza.pot

[nosetests]
nologcapture=1